feat: Nueva consulta MongoDB y SQL Server
